# store_management

./: README.md  pyproject.toml
store_management/: hooks.py
store_management/store_management/doctype/store/: store.js  store.json  store.py  test_store.py
